language/move-lang/tests/move_check/translated_ir_tests/commands/no_let_outside_if.move
fun main() {
    if (true) {
        y = 5;
    } else {
        y = 0;
    };
    0x0::Transaction::assert(y == 5, 42);
}
